Fix hot reload and add attack speed mod effect